# bmen-422-storm-animation

./: .gitignore  README.md  environment.yml  pyproject.toml
notes/: speaker_notes.md
scripts/: present.ps1  render_full.ps1  render_preview.ps1
storm_slides/: __init__.py  __main__.py  algorithm_scenes.py  config.py  custom_animations.py  custom_mobjects.py  instrument_scenes.py  main_deck.py  models.py  physics_scenes.py  scene_base.py  schedule.py  simulator.py  utils_plot.py
tests/: test_localization.py  test_simulator.py  test_timing_contract.py
